--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
     - Methoden:
         - Wetsanalyse: methoden/wetsanalyse.md
         - ALEF: methoden/ALEF.md
+        - RegelSpraak: methoden/RegelSpraak.md
         - FLINT: methoden/FLINT.md
     - Over: over.md
 
