trnnslated NLX pages

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -76,3 +76,5 @@ plugins:
           Methoden: Methods
           Wetsanalyse: Law analysis
           Over: About
+          Introductie: Introduction
+          
