--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
         - Wetsanalyse: methoden/wetsanalyse.md
         - ALEF: methoden/ALEF.md
         - RegelSpraak: methoden/RegelSpraak.md
+        - DMN: methoden/DMN.md
         - FLINT: methoden/FLINT.md
     - NLX:
         - Introductie: nlx/nlx-intro.md
