--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ repo_name: regels.overheid.nl
 repo_url: https://gitlab.com/discipl/RON/regels.overheid.nl
 
 # Hide the edit button
-edit_uri: ""
+edit_uri: edit/edited_via_edit_button/docs/
 
 nav:
     - Home: index.md
