--- a/apps/cms/tsconfig.json
+++ b/apps/cms/tsconfig.json
@@ -6,7 +6,7 @@
     "rootDir": ".",
     "module": "CommonJS",
     "moduleResolution": "Node",
-    "lib": ["ES2020"],
+    "lib": ["ES2020", "DOM"],
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
 
