--- a/apps/cms/dockerfile.dev
+++ b/apps/cms/dockerfile.dev
@@ -4,10 +4,10 @@ WORKDIR /code/apps/cms
 
 COPY package.json package.json
 
-COPY package-lock.json package-lock.json
+COPY yarn.lock yarn.lock
 
-RUN npm i
+RUN yarn install
 
 EXPOSE 1337
 
-CMD npm run develop
+CMD yarn dev
