--- a/apps/web/dockerfile.dev
+++ b/apps/web/dockerfile.dev
@@ -4,10 +4,10 @@ WORKDIR /code/apps/web
 
 COPY package.json package.json
 
-COPY package-lock.json package-lock.json
+COPY yarn.lock yarn.lock
 
-RUN npm i
+RUN yarn install
 
 EXPOSE 3000
 
-CMD npm run dev
+CMD yarn dev
