--- a/turbo.json
+++ b/turbo.json
@@ -4,6 +4,10 @@
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**", ".next/**"]
+    },
+    "dev": {
+      "dependsOn": ["^dev"],
+      "cache": false
     }
   }
 }
