fix: docker-compose

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,5 +1,6 @@
 services:
   web:
+    container_name: web_dev
     depends_on:
       - cms
     build:
@@ -8,20 +9,25 @@ services:
     volumes:
       - /code/node_modules
       - /code/apps/web/node_modules
+      - /code/apps/cms/node_modules
+      - .:/code
     ports:
       - 3000:3000
     environment:
       - CMS_API=http://host.docker.internal:1337/api
   cms:
+    container_name: cms_dev
     depends_on:
       - postgres
     restart: always
     volumes:
       - /code/node_modules
+      - /code/apps/web/node_modules
       - /code/apps/cms/node_modules
+      - .:/code
     build:
       context: .
-      dockerfile: apps/cmsdockerfile.dev
+      dockerfile: apps/cms/dockerfile.dev
     ports:
       - 1337:1337
     environment:
@@ -37,6 +43,7 @@ services:
       - JWT_SECRET=jwt-secret
   postgres:
     image: postgres:14.5
+    container_name: postgres_dev
     restart: always
     volumes:
       - pgdata:/var/lib/postgresql/data
