--- a/apps/cms/dockerfile.dev
+++ b/apps/cms/dockerfile.dev
@@ -1,13 +1,11 @@
 FROM node:16.17.0
 
-WORKDIR /code/apps/cms
+WORKDIR /code
 
-COPY package.json package.json
+COPY . .
 
-COPY yarn.lock yarn.lock
-
-RUN yarn install
+RUN yarn workspace @regels-overheid/cms install
 
 EXPOSE 1337
 
-CMD yarn dev
+CMD [ "yarn", "dev:cms" ]
