--- a/apps/web/dockerfile.dev
+++ b/apps/web/dockerfile.dev
@@ -1,13 +1,11 @@
 FROM node:16.17.0
 
-WORKDIR /code/apps/web
+WORKDIR /code
 
-COPY package.json package.json
+COPY . .
 
-COPY yarn.lock yarn.lock
-
-RUN yarn install
+RUN yarn workspace @regels-overheid/web install
 
 EXPOSE 3000
 
-CMD yarn dev
+CMD [ "yarn", "dev:web" ]
