--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,12 +5,29 @@ services:
       - ./apps/cms/.env.prod.local
     volumes:
       - /code/node_modules
+      - /code/web/node_modules
+
       - /code/cms/node_modules
     build:
       context: .
       dockerfile: apps/cms/dockerfile.prod
     ports:
       - 1337:1337
+  web:
+    depends_on:
+      - nginx
+    restart: always
+    environment:
+      - CMS_API=http://host.docker.internal:1337/api
+    volumes:
+      - /code/node_modules
+      - /code/web/node_modules
+      - /code/cms/node_modules
+    build:
+      context: .
+      dockerfile: apps/web/dockerfile.prod
+    ports:
+      - 3000:3000
   nginx:
     depends_on:
       - cms
@@ -20,17 +37,3 @@ services:
     build:
       context: ./apps/nginx
       dockerfile: dockerfile.prod
-  web:
-    depends_on:
-      - nginx
-    restart: always
-    environment:
-      - CMS_API=http://host.docker.internal:1337/api
-    volumes:
-      - /code/node_modules
-      - /code/cms/node_modules
-    build:
-      context: .
-      dockerfile: apps/web/dockerfile.prod
-    ports:
-      - 3000:3000
