--- a/apps/web/dockerfile.prod
+++ b/apps/web/dockerfile.prod
@@ -6,14 +6,10 @@ RUN apt-get -q update && apt-get -qy install netcat
 
 COPY . .
 
-RUN npm i
-
 RUN [ "chmod", "-x", "/code/.docker/wait-for" ]
 
 RUN [ "chmod", "775", "/code/.docker/wait-for" ]
 
-WORKDIR /code/apps/web
+RUN yarn 
 
-RUN npm i 
-
-CMD sh -c '/code/.docker/wait-for -s cms:1337 -t 30 -- npm run build && npm run start'
+CMD sh -c '/code/.docker/wait-for -s cms:1337 -t 30 -- yarn prod:web'
