--- a/apps/web/dockerfile.dev
+++ b/apps/web/dockerfile.dev
@@ -4,8 +4,8 @@ WORKDIR /code
 
 COPY . .
 
-RUN yarn workspace @regels-overheid/web install
+RUN yarn 
 
-EXPOSE 3000
+EXPOSE 3002
 
 CMD [ "yarn", "dev:web" ]
