feat: add docs to docker

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3002",
-    "prod": "next start",
+    "dev": "next dev --port 9000",
+    "prod": "yarn start",
     "build": "next build",
     "start": "next start",
     "fix": "yarn fix:lint && yarn fix:prettier",
