--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "apps/*"
   ],
   "scripts": {
-    "start:dev": "docker compose -f docker-compose.dev.yml up",
+    "start:dev": "docker compose -f docker-compose.dev.yml up --build",
     "dev": "turbo run dev --parallel",
     "build": "turbo run build --parallel",
     "dev:cms": "turbo run dev --scope=cms",
