--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev --port 9000",
-    "prod": "yarn start",
+    "start": "next start --port 9000",
     "build": "next build",
-    "start": "next start",
+    "prod": "yarn start",
     "fix": "yarn fix:lint && yarn fix:prettier",
     "fix:lint": "eslint src --fix --ext ts,tsx,js,jsx",
     "fix:prettier": "prettier \"./**/*.{js,jsx,ts,tsx,json,css,scss,md}\" --write --ignore-path ../../.prettierignore",
