--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "start:dev": "docker compose -f docker-compose.dev.yml up --build",
+    "start:prod": "docker compose -f docker-compose.prod.yml up --build",
     "dev": "turbo run dev --parallel",
     "build": "turbo run build --parallel",
     "dev:cms": "turbo run dev --scope=cms",
