--- a/apps/cms/dockerfile.prod
+++ b/apps/cms/dockerfile.prod
@@ -4,8 +4,8 @@ WORKDIR /code
 
 COPY . .
 
-RUN yarn
+RUN pnpm install
 
-RUN yarn build:cms
+RUN pnpm build:cms
 
-CMD yarn start:cms
+CMD pnpm start:cms
