--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
+    "eslint": "^8.23.1",
     "turbo": "^1.4.5",
     "typescript": "^4.7.4"
   }
