--- a/apps/cms/dockerfile.prod
+++ b/apps/cms/dockerfile.prod
@@ -2,10 +2,31 @@ FROM node:16.17.0
 
 WORKDIR /code
 
-COPY . .
+RUN corepack enable
 
-RUN pnpm install
+RUN corepack prepare pnpm@latest --activate
 
-RUN pnpm build:cms
+COPY .npmrc /code/.npmrc
 
-CMD pnpm start:cms
+COPY pnpm-lock.yaml /code/pnpm-lock.yaml
+
+COPY package.json /code/package.json
+
+COPY apps/cms/package.json /code/apps/cms/package.json
+
+# COPY package.json /code/package.json
+
+
+# COPY apps/cms/package.json /code/apps/cms/package.json
+
+# RUN --mount=type=cache,id=pnpm-store,target=/root/.pnpm-store\
+#       pnpm fetch
+
+RUN --mount=type=cache,id=pnpm-store,target=/root/.pnpm-store\
+     pnpm install -r  --shamefully-hoist --config.auto-install-peers=true 
+
+ADD . .
+
+RUN NODE_ENV=prodcution pnpm build:cms
+
+CMD NODE_ENV=prodcution pnpm start:cms
