--- a/apps/cms/tsconfig.json
+++ b/apps/cms/tsconfig.json
@@ -1,20 +1,23 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "@strapi/typescript-utils/tsconfigs/server",
   "compilerOptions": {
-    "target": "ES2015",
     "outDir": "dist",
-    "rootDir": ".",
-    "module": "CommonJS",
-    "moduleResolution": "Node",
-    "lib": ["ES2020", "DOM"],
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-
-    "incremental": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "noEmitOnError": true
+    "rootDir": "."
   },
-  "include": ["./", "src/**/*.json"],
-  "exclude": ["node_modules/", "build/", "dist/", ".cache/", ".tmp/", "src/admin/", "**/*.test.ts", "src/plugins/**"]
+  "include": [
+    "./",
+    "./**/*.ts",
+    "./**/*.js",
+    "src/**/*.json"
+  ],
+  "exclude": [
+    "node_modules/",
+    "build/",
+    "dist/",
+    ".cache/",
+    ".tmp/",
+    "src/admin/",
+    "**/*.test.*",
+    "src/plugins/**"
+  ]
 }
