fix: production docker

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,27 +8,21 @@ services:
       - 9001:9001
     env_file:
       - .env
-  # web:
-  #   depends_on:
-  #     - nginx
-  #   restart: always
-  #   environment:
-  #     - CMS_API=http://host.docker.internal:9001/api
-  #   volumes:
-  #     - /code/node_modules
-  #     - /code/web/node_modules
-  #     - /code/cms/node_modules
-  #   build:
-  #     context: .
-  #     dockerfile: apps/web/dockerfile.prod
-  #   ports:
-  #     - 9000:9000
-  # nginx:
-  #   depends_on:
-  #     - cms
-  #   restart: always
-  #   ports:
-  #     - 80:80
-  #   build:
-  #     context: ./apps/nginx
-  #     dockerfile: dockerfile.prod
+  web:
+    restart: always
+    environment:
+      - CMS_API=http://host.docker.internal:9001/api
+    build:
+      context: .
+      dockerfile: apps/web/dockerfile.prod
+    ports:
+      - 9000:9000
+  nginx:
+    depends_on:
+      - cms
+    restart: always
+    ports:
+      - 80:80
+    build:
+      context: ./apps/nginx
+      dockerfile: dockerfile.prod
