--- a/apps/cms/dockerfile.prod
+++ b/apps/cms/dockerfile.prod
@@ -6,24 +6,14 @@ RUN corepack enable
 
 RUN corepack prepare pnpm@latest --activate
 
-COPY .npmrc /code/.npmrc
-
-COPY pnpm-lock.yaml /code/pnpm-lock.yaml
-
-COPY package.json /code/package.json
+COPY .npmrc pnpm-lock.yaml package.json pnpm-workspace.yaml ./
 
 COPY apps/cms/package.json /code/apps/cms/package.json
 
-# COPY package.json /code/package.json
-
-
-# COPY apps/cms/package.json /code/apps/cms/package.json
-
-# RUN --mount=type=cache,id=pnpm-store,target=/root/.pnpm-store\
-#       pnpm fetch
+COPY apps/web/package.json /code/apps/web/package.json
 
 RUN --mount=type=cache,id=pnpm-store,target=/root/.pnpm-store\
-     pnpm install -r  --shamefully-hoist --config.auto-install-peers=true 
+     pnpm install -r --shamefully-hoist --config.auto-install-peers=true
 
 ADD . .
 
