--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "license": "EUROPEAN UNION PUBLIC LICENCE v. 1.2",
   "version": "1.0.0",
   "description": "",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
     "start:dev": "docker compose -f docker-compose.dev.yml up --build",
     "start:prod": "docker compose -f docker-compose.prod.yml up --build",
@@ -17,7 +21,8 @@
     "build:cms": "turbo run build --scope=cms",
     "build:web": "turbo run build --scope=web",
     "start:cms": "turbo run start --scope=cms",
-    "start:web": "turbo run start --scope=web"
+    "start:web": "turbo run start --scope=web",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "repository": {
     "type": "git",
@@ -28,10 +33,14 @@
   },
   "homepage": "https://github.com/MinBZK/regels.overheid.nl",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.35.1",
-    "@typescript-eslint/parser": "^5.35.1",
-    "eslint": "^8.23.1",
     "turbo": "^1.4.5",
     "typescript": "^4.7.4"
-  }
+  },
+  "devDependencies": {
+    "@regels-overheid/eslint-config": "workspace:*"
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "packageManager": "pnpm@7.12.0"
 }
