--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,7 +26,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.3",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "@regels-overheid/ui": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^18.7.9",
