--- a/package.json
+++ b/package.json
@@ -33,11 +33,15 @@
   },
   "homepage": "https://github.com/MinBZK/regels.overheid.nl",
   "dependencies": {
+    "@types/node": "^18.7.9",
     "turbo": "^1.4.5",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "react": "^18.2.0"
   },
   "devDependencies": {
-    "@regels-overheid/eslint-config": "workspace:*"
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@regels-overheid/eslint-config-regels-overheid": "workspace:*"
   },
   "engines": {
     "node": ">=14.0.0"
