build: install components from NL Design System community

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,7 +20,11 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/material": "^5.10.1",
+    "@nl-rvo/assets": "1.0.0-alpha.124",
+    "@nl-rvo/components-react": "1.0.0-alpha.2",
+    "@nl-rvo/design-tokens": "1.0.0-alpha.132",
     "@reduxjs/toolkit": "^1.8.5",
+    "@utrecht/component-library-react": "1.0.0-alpha.165",
     "next": "12.2.5",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
