--- a/apps/web/dockerfile.dev
+++ b/apps/web/dockerfile.dev
@@ -1,4 +1,4 @@
-FROM node:16.17-alpine
+FROM node:16.17.0
 
 WORKDIR /code
 
@@ -6,26 +6,17 @@ RUN corepack enable
 
 RUN corepack prepare pnpm@latest --activate
 
-COPY .npmrc /code/.npmrc
+COPY .npmrc pnpm-lock.yaml package.json pnpm-workspace.yaml ./
 
-COPY turbo.json /code/turbo.json
-
-COPY tsconfig.json /code/tsconfig.json
-
-COPY package.json /code/package.json
-
-COPY pnpm-lock.yaml /code/pnpm-lock.yaml
-
-COPY pnpm-workspace.yaml /code/pnpm-workspace.yaml
+COPY apps/cms/package.json /code/apps/cms/package.json
 
 COPY apps/web/package.json /code/apps/web/package.json
 
-COPY apps/web/src /code/apps/web/src
+COPY apps/docs/package.json /code/apps/docs/package.json
 
 RUN --mount=type=cache,id=pnpm-store,target=/root/.pnpm-store\
-      pnpm fetch
+     pnpm install --shamefully-hoist --config.auto-install-peers=true
 
-RUN --mount=type=cache,id=pnpm-store,target=/root/.pnpm-store\
-     pnpm install -r --offline
+ADD . .
 
 CMD pnpm dev:web
