--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,6 +9,7 @@ services:
     volumes:
       - ./apps/cms:/code/apps/cms
       - /code/apps/cms/node_modules
+      - /code/apps/cms/dist
       - /code/node_modules
     ports:
       - 9001:9001
@@ -30,7 +31,9 @@ services:
       context: .
       dockerfile: apps/docs/dockerfile.dev
     volumes:
+      - ./apps/docs:/code/docs/web
       - /code/apps/docs/node_modules
+      - /code/node_modules
     ports:
       - 9002:9002
   web:
