chore: add scripts

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "start": "docusaurus serve  --port 9002 --host 0.0.0.0",
     "docusaurus": "docusaurus",
     "dev": "docusaurus start --port 9002 --host 0.0.0.0",
     "build": "docusaurus build",
