fix: nginx prod conf

--- a/apps/nginx/prod.conf
+++ b/apps/nginx/prod.conf
@@ -1,14 +1,13 @@
 server {
-    # location / {
-    #     proxy_pass http://web:9000;
-    # }
+    location / {
+        proxy_pass http://web:9000;
+    }
 
-    # location /cms {
-    #     rewrite ^/cms/?(.*)$ /$1 break;
+    location /cms {
+        rewrite ^/cms/?(.*)$ /$1 break;
 
-    #     proxy_pass http://cms:9001;
-    # }
-
+        proxy_pass http://cms:9001;
+    }
 
     location /docs {
         proxy_pass http://docs:9002;
