--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start:dev": "docker compose -f docker-compose.dev.yml up --build",
-    "start:prod": "docker compose -f docker-compose.prod.yml up --build",
+    "start:dev": "docker-compose -f \"docker-compose.dev.yml\" up --build",
+    "start:prod": "docker compose -f \"docker-compose.prod.yml\" up --build",
     "dev": "turbo run dev --parallel",
     "build": "turbo run build --parallel",
     "dev:cms": "turbo run dev --scope=cms",
