--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,7 +19,10 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@mdx-js/loader": "^2.1.5",
+    "@mdx-js/react": "^1.6.22",
     "@mui/material": "^5.10.1",
+    "@next/mdx": "^13.0.6",
     "@reduxjs/toolkit": "^1.8.5",
     "next": "12.2.5",
     "next-redux-wrapper": "^7.0.5",
