--- a/apps/nginx/prod.conf
+++ b/apps/nginx/prod.conf
@@ -1,15 +1,21 @@
-server {
-    location / {
-        proxy_pass http://web:9000;
-    }
+events {
+    
+}
 
-    location /cms {
-        rewrite ^/cms/?(.*)$ /$1 break;
+http {
+    server {
+        location / {
+            proxy_pass http://web:9000;
+        }
 
-        proxy_pass http://cms:9001;
-    }
+        location /cms {
+            rewrite ^/cms/?(.*)$ /$1 break;
 
-    location /docs {
-        proxy_pass http://docs:9002;
+            proxy_pass http://cms:9001;
+        }
+
+        location /docs {
+            proxy_pass http://docs:9002;
+        }
     }
 }
