--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,21 +4,26 @@ services:
     build:
       context: .
       dockerfile: apps/cms/dockerfile.prod
+      args:
+        DOPPLER_TOKEN: ${DOPPLER_TOKEN}
     ports:
       - 9001:9001
-    env_file:
-      - .env
     volumes:
-      - ./apps/cms/public/uploads:/code/apps/cms/public/uploads
+      - ./apps/cms/public:/app/public
+    environment:
+      - DOPPLER_TOKEN
   web:
     restart: always
     build:
       context: .
       dockerfile: apps/web/dockerfile.prod
     ports:
-      - 9000:9000
+      - 9000:3000
     extra_hosts:
       - host.docker.internal:host-gateway
+    environment:
+      - DOPPLER_TOKEN
+      - CMS_API_URL=http://host.docker.internal:9001/api
   docs:
     restart: always
     build:
@@ -27,9 +32,13 @@ services:
     ports:
       - 9002:9002
   nginx:
+    depends_on:
+      - cms
+      - web
+      - docs
     restart: always
     ports:
-      - 8080:80
+      - 80:80
     build:
       context: ./apps/nginx
       dockerfile: dockerfile.prod
