--- a/apps/cms/dockerfile.dev
+++ b/apps/cms/dockerfile.dev
@@ -1,24 +1,47 @@
-FROM node:16.17.0
+# ==== Builder ====
+FROM node:18-alpine as builder
 
-WORKDIR /code
+RUN apk add --no-cache libc6-compat
+RUN apk update
 
-RUN corepack enable
+WORKDIR /app
 
-RUN corepack prepare pnpm@latest --activate
+RUN yarn global add turbo
 
-COPY .npmrc pnpm-lock.yaml package.json pnpm-workspace.yaml ./
+COPY . .
 
-COPY apps/cms/package.json /code/apps/cms/package.json
+RUN turbo prune --scope=@regels-overheid/cms --docker
 
-COPY apps/web/package.json /code/apps/web/package.json
+# ==== Installer ====
+FROM node:18-alpine AS installer
 
-COPY apps/docs/package.json /code/apps/docs/package.json
+RUN apk add --no-cache libc6-compat
+RUN apk update
 
-RUN --mount=type=cache,id=pnpm-store,target=/root/.pnpm-store\
-     pnpm install --shamefully-hoist --config.auto-install-peers=true
+WORKDIR /app
 
-ADD . .
+COPY .gitignore .gitignore
+COPY --from=builder /app/out/json/ .
+COPY --from=builder /app/out/yarn.lock ./yarn.lock
 
-RUN PUBLIC_URL="http://cms.localhost" pnpm build:cms
+RUN yarn install
 
-CMD pnpm dev:cms
+
+# ==== Runner ====
+FROM node:18-alpine AS runner
+
+WORKDIR /app
+
+RUN addgroup --system --gid 1001 nodejs
+RUN adduser --system --uid 1001 app
+
+COPY --from=installer --chown=app:nodejs /app/node_modules ./node_modules
+COPY --from=builder --chown=app:nodejs /app/out/full/apps/cms .
+
+ENV PUBLIC_URL http://cms.localhost
+
+RUN yarn build
+
+USER app
+
+CMD yarn dev
